--- a/app/src/main/res/layout/activity_indicar_tags.xml
+++ b/app/src/main/res/layout/activity_indicar_tags.xml
@@ -4,14 +4,18 @@
     android:id="@+id/activity_indicar_tags_registre_usuari"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pes12.pickanevent.view.IndicarTagsActivity">
+    tools:context="com.pes12.pickanevent.view.IndicarTagsActivity"
+    android:background="#bfffc2">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        ></include>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#bfffc2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_below="@id/toolbar">
 
         <ListView
             android:layout_width="match_parent"
@@ -42,7 +46,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/tagsMinimos"
             android:layout_alignTop="@+id/button4"
-            android:layout_alignStart="@+id/editText"
             android:layout_toStartOf="@+id/button4"
             android:textSize="18sp"
             android:layout_marginLeft="9dp"
@@ -55,7 +58,6 @@
             android:id="@+id/textoNuevo"
             android:layout_marginRight="10dp"
             android:textSize="18sp"
-            android:layout_alignStart="@+id/editText"
             android:layout_toStartOf="@+id/crearTag"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp" />
@@ -80,7 +82,6 @@
             android:layout_height="50dp"
             android:layout_width="100dp"
             android:layout_marginRight="10dp"
-            android:layout_above="@+id/editText"
             android:layout_alignStart="@+id/button4"
             android:layout_alignTop="@+id/textoNuevo" />
 
