--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -37,9 +37,10 @@
 
     <FrameLayout
         android:id="@+id/main_fragment"
+        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-
+        android:layout_marginTop="?attr/actionBarSize"
         android:orientation="vertical" />
 
 </android.support.design.widget.CoordinatorLayout>
