--- a/app/src/main/res/layout/fragment_grupos.xml
+++ b/app/src/main/res/layout/fragment_grupos.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <TextView
+     <!--   <TextView
             android:text="@string/mis_grupos"
             android:layout_width="match_parent"
             android:id="@+id/EventosTituloMainline"
@@ -27,14 +27,16 @@
             android:layout_height="24dp"
 
             android:layout_alignParentStart="true"
-            android:layout_marginTop="64dp" />
+            android:layout_marginTop="64dp" /> -->
 
         <ListView
             android:layout_width="match_parent"
             android:id="@+id/eventtimeline"
-            android:layout_below="@+id/EventosTituloMainline"
-            android:layout_alignStart="@+id/EventosTituloMainline"
-
+            android:divider="@android:color/transparent"
+            android:dividerHeight="7.0sp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="7dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
