--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -1,72 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="horizontal"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-    android:background="#ffff">
-
-<TextView
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:id="@+id/id"/>
-
-<TextView
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:id="@+id/tipus"/>
-
-<ImageView android:id="@+id/icon" android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:layout_marginLeft="2dp" />
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/layoutAdapter"
-    >
-
-    <TextView android:id="@+id/text1" android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/primera_linea"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp" />
-
-    <RelativeLayout
+<android.support.v7.widget.CardView android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#ffff">
 
-        <Button
-            android:text="@string/DEFAULT_BOTON"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/button"
-            android:background="@drawable/boton_amarillo_custom"
-            android:bottomRightRadius="10dp"
-            android:bottomLeftRadius="10dp"
-            android:topLeftRadius="10dp"
-            android:topRightRadius="10dp"
-            android:layout_marginBottom="10dp"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:layout_weight="1"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="5dp"
-            android:layout_height="90px"
-            android:layout_width="wrap_content" />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/id"/>
 
-        <TextView android:id="@+id/text2"
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/tipus"/>
+
+        <ImageView android:id="@+id/icon" android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginLeft="2dp" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/DEFAULT_SEGUNDA_LINEA"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="75dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
-    </RelativeLayout>
+            android:layout_height="70dp"
+            android:orientation="vertical"
+            android:id="@+id/layoutAdapter"
+            >
 
-</LinearLayout>
+            <TextView android:id="@+id/text1" android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:textStyle="normal|bold"
+                android:background="?attr/colorPrimary"
+                android:textColor="#fff"
+                android:textSize="18sp"
+                android:text="@string/primera_linea"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:paddingTop="2dp" />
 
-</LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:text="@string/DEFAULT_BOTON"
+                    android:id="@+id/button"
+                    android:background="@drawable/boton_amarillo_custom"
+                    android:bottomRightRadius="10dp"
+                    android:bottomLeftRadius="10dp"
+                    android:topLeftRadius="10dp"
+                    android:topRightRadius="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:paddingLeft="10dp"
+                    android:layout_weight="1"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="5dp"
+                    android:layout_height="90px"
+                    android:layout_width="wrap_content" />
+
+                <TextView android:id="@+id/text2"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/DEFAULT_SEGUNDA_LINEA"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="75dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignBottom="@+id/button" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
