--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -66,7 +66,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 
                 <TextView android:id="@+id/text2"
                     android:layout_marginTop="4dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:text="@string/DEFAULT_SEGUNDA_LINEA"
                     android:layout_marginLeft="5dp"
