--- a/app/src/main/res/layout/activity_ver_info_evento.xml
+++ b/app/src/main/res/layout/activity_ver_info_evento.xml
@@ -313,7 +313,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textGrupo"
-                android:textSize="14sp"
+                android:textSize="20sp"
                 android:textStyle="normal|bold"
                 android:textColor="#fff"
                 android:layout_gravity="left"
@@ -334,7 +334,8 @@
                 android:id="@+id/layoutEdit"
                 android:background="#fff"
                 android:layout_below="@+id/layoutShare"
-                android:layout_alignParentStart="true">
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
