--- a/app/src/main/res/layout/activity_crear_grupo.xml
+++ b/app/src/main/res/layout/activity_crear_grupo.xml
@@ -26,10 +26,10 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:id="@+id/imagenGrupo"
-                android:layout_height="160dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:onClick="abrirGaleria"/>
+                android:onClick="abrirGaleria"
+                android:layout_height="140dp" />
 
 
             <RelativeLayout
@@ -86,7 +86,7 @@
                 android:layout_below="@+id/editorNGrupo"
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="15dp"
-                android:layout_height="100dp" />
+                android:layout_height="70dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -101,10 +101,10 @@
                 android:background="#fff"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginTop="26dp"
+                android:layout_marginTop="15dp"
                 android:layout_below="@+id/imagenGrupo"
                 android:layout_centerHorizontal="true"
-                android:layout_height="375dp" />
+                android:layout_height="350dp" />
 
             <EditText
                 android:layout_width="match_parent"
