--- a/app/src/main/res/layout/activity_crear_grupo.xml
+++ b/app/src/main/res/layout/activity_crear_grupo.xml
@@ -5,7 +5,8 @@
     android:id="@+id/activity_crear_grupo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pes12.pickanevent.view.CrearGrupoActivity">
+    tools:context="com.pes12.pickanevent.view.CrearGrupoActivity"
+    android:background="#bfffc2">
 
     <include
         android:id="@+id/toolbar"
