--- a/app/src/main/res/layout/dialog_borrar_grupo.xml
+++ b/app/src/main/res/layout/dialog_borrar_grupo.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_borrar_grupo"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="wrap_content"
     android:background="#bfffc2"
     android:layout_height="wrap_content"
     android:paddingBottom="10dp"
