--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -7,7 +7,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffff">
+        android:background="#ffffff">
 
     <TextView
         android:layout_width="0dp"
@@ -19,9 +19,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
         android:layout_height="0dp"
         android:id="@+id/tipus"/>
 
-        <ImageView android:id="@+id/icon" android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginLeft="2dp" />
+        <ImageView android:id="@+id/icon" android:layout_width="50dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center" />
 
         <LinearLayout
             android:layout_width="match_parent"
